# SetBG

./: .gitignore  README.md  pyproject.toml
src/setbg/: common.py  rbg.py  setbg.py
